--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   border-radius: 30px;
   padding: 0 5rem;
   box-shadow: 0 20px 20px rgba(0,0,0,0.2), 0 0 50px rgba(0,0,0,0.2);
+  user-select: none;
 }
 
 .car {
@@ -40,6 +41,7 @@ body {
 .car img {
   width: 30rem;
   z-index: 2;
+  transition: all 0.75s ease-out;
 }
 
 .circle {
@@ -57,6 +59,7 @@ body {
 
 .info h1 {
   font-size: 3rem;
+  transition: all 0.75s ease-out;
 }
 
 .info h3 {
@@ -64,11 +67,13 @@ body {
   padding: 2.3rem 0;
   color: #585858;
   font-weight: lighter;
+  transition: all 0.75s ease-out;
 }
 
 .features {
   display: flex; 
   justify-content: space-between;
+  transition: all 0.75s ease-out;
 }
 
 .feature {
@@ -103,4 +108,5 @@ body {
   cursor: pointer;
   font-weight: bolder;
   font-size: 14px;
+  transition: all 0.75s ease-out;
 }
